--- a/style.css
+++ b/style.css
@@ -1,152 +1,150 @@
 /*Reset default*/
 ul {
-    margin:0;
-    padding: 0px;
+  margin:0;
+  padding: 0px;
 }
 li, h3 {
-    list-style:none;
+  list-style:none;
 }
 input,button{
-    outline:none;
+  outline:none;
 }
 
 /* Basic Style */
 .to-do-app {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
 .about-matrix {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 .about-matrix__img {
-    width: 100%;
+  width: 100%;
 }
 .about-matrix__more-info {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.about-matrix { text-align: center;
-}
+  .about-matrix { 
+    text-align: center;
+  }
 }
 .to-do-container {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
 .add-item__form {
-    display: flex;
+  display: flex;
 }
 .button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0px;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+  cursor: pointer;
 }
 .button:hover {
-    color: #3a3a3a;
+  color: #3a3a3a;
 }
 /* Heading */
 .section-header,
 .add-item__header{
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
-
-
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
 .task-container__input {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #ddd;
-    background: #fff;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
 .task-container__input:focus {
-    color: #333;
+  color: #333;
 }
 
 /* New Task */
 .add-item__header {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
 .task-container__input {
-    width: 318px;
+  width: 318px;
 }
 
 /* Task list */
 .task-container {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .task-container > * {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .task-container > input[type="checkbox"] {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 .task-container > label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
 .task-container >    input[type="text"] {
-    width: 226px
+  width: 226px
 }
 .delete__img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 .delete__img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 #completed-tasks label {
-    text-decoration: line-through
-    color: #888;
+  text-decoration: line-through
+  color: #888;
 }
 
 /* Edit Task */
 .tasks-list li input[type=text] {
-    display:none
+  display:none
 }
 .tasks-list li.edit-mode label {
-    display:none;
+  display:none;
 }
 
 .tasks-list li.edit-mode input[type=text] {
-    display:inline-block;
-    width:224px
+  display:inline-block;
+  width:224px
 }
 
