refactor(basic-3.7): semicolon after properties

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ input,button{
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-item__form {
   display: flex;
@@ -118,7 +118,7 @@ input,button{
   width: 226px;
 }
 .task-container >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 .delete__img {
   height: 2em;
@@ -131,13 +131,13 @@ input,button{
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .tasks-list li input[type=text] {
-  display: none
+  display: none;
 }
 .tasks-list li.edit-mode label {
   display: none;
