--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button{
     text-align: center;
   }
 }
-.to-do-container {
+.app-container {
   display: block;
   width: 500px;
   margin: 0 auto 0;
