--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button{
   margin: 0;
   text-transform: uppercase;
 }
-.task-container__input {
+.add-item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -85,7 +85,7 @@ button{
   font-family: Lato, sans-serif;
   color: #888;
 }
-.task-container__input:focus {
+.add-item__input:focus {
   color: #333;
 }
 
@@ -94,7 +94,7 @@ button{
   display: block;
   margin: 0 0 20px;
 }
-.task-container__input {
+.add-item__input {
   width: 318px;
 }
 
